--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/bootstrap/css/bootstrap.css
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/bootstrap/css/bootstrap.css
@@ -1073,7 +1073,7 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-body {
+.jumbotron body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
